--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>NovaLaunch - Solana Multichain Token Launchpad</title>
+    <title>Twisted Divergence - Solana Multichain Token Launchpad</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -16,6 +15,23 @@
       }
       .font-roboto-mono {
         font-family: 'Roboto Mono', monospace;
+      }
+      .range-thumb-purple::-webkit-slider-thumb {
+        -webkit-appearance: none;
+        appearance: none;
+        width: 20px;
+        height: 20px;
+        background: #a855f7; /* purple-500 */
+        cursor: pointer;
+        border-radius: 50%;
+        margin-top: -7px;
+      }
+      .range-thumb-purple::-moz-range-thumb {
+        width: 20px;
+        height: 20px;
+        background: #a855f7; /* purple-500 */
+        cursor: pointer;
+        border-radius: 50%;
       }
     </style>
   <script type="importmap">
@@ -33,5 +49,7 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/index.tsx"></script>
+    <script type="text/javascript" src="/tradingview/charting_library.js"></script>
+    <script type="text/javascript" src="/tradingview/datafeeds/udf/dist/bundle.js"></script>
   </body>
 </html>
